Fixing Scrollbar and Page

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
 
 body {
